Version stable avec la majorite des fonctionnalites phase test